# crogia

./: README.md  project_description.md
.cursor/rules/: all.mdc
.cursorrules/: all.mdc
backend/: API_DOCS.md  README.md  agent_platform.py  config.py  env.example  main.py  pyproject.toml  requirements.txt  run.py  start.sh  test_api.py  test_docker.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  ConversationWorkflow.tsx  Terminal.tsx  TerminalManager.tsx  WelcomeScreen.tsx
frontend/src/constants/: urls.ts
frontend/src/services/: api.ts  terminalWebSocket.ts  websocket.ts
frontend/src/types/: api.ts
taskmanager/: 2025-06-06-fix-prompt-remove-build-agent.taskfile.md  2025-06-06-implement-agent-platform-improvements.taskfile.md  2025-06-09-add-debug-statements-terminals.taskfile.md  2025-06-09-debug-terminal-output-issue.taskfile.md  2025-06-09-fix-terminal-reconnection-loop.taskfile.md  2025-06-09-fix-terminal-websocket-hanging.taskfile.md  2025-06-09-implement-conversation-workflow-rendering.taskfile.md  2025-06-09-implement-interactive-terminals.taskfile.md  alltasks.txt
